# open-guardrail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  RELEASE_v1.2.0.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  guard_request.md
.github/workflows/: ci.yaml  docs.yaml  publish-python.yaml  publish.yaml
benchmarks/: code-safety.bench.ts  fixtures.ts  package.json  performance.bench.ts  pii-detection.bench.ts  prompt-injection.bench.ts  run.ts  toxicity.bench.ts  tsconfig.json  vitest.config.ts
docs-site/: index.md  package.json  playground.md
docs-site/.vitepress/: config.ts
docs-site/adapters/: anthropic.md  express.md  fastify.md  hono.md  langchain.md  nextjs.md  openai.md  vercel-ai.md
docs-site/guards/: agent-safety.md  ai-delegation.md  content.md  format.md  korean.md  operational.md  (+3 more)
playground/: index.html  package.json
presets/: agent-safety.yaml  agentic-commerce.yaml  ai-basic-act-kr.yaml  bias-fairness.yaml  chatbot.yaml  chinese.yaml  code-review.yaml  codegen-safety.yaml  compliance-full.yaml  content.yaml  default.yaml  education-k12.yaml  enterprise.yaml  eu-ai-act.yaml  finance.yaml  full-security.yaml  gdpr.yaml  government.yaml  healthcare-kr.yaml  healthcare.yaml  japanese.yaml  korean.yaml  multi-agent.yaml  privacy-first.yaml  rag-safety.yaml  responsible-ai.yaml  security.yaml  strict.yaml  voice-ai.yaml
python/: README.md  pyproject.toml
python/open_guardrail/: __init__.py  core.py  decorators.py
python/open_guardrail/adapters/: __init__.py  anthropic_adapter.py  django_adapter.py  fastapi.py  flask_adapter.py  langchain_adapter.py  openai_adapter.py
python/open_guardrail/guards/: __init__.py  academic_integrity_output.py  accessibility_output.py  accessibility_text.py  address_detect.py  adversarial_suffix.py  age_appropriate_content.py  age_gate.py  agent_budget_limit.py  agent_consent_guard.py  agent_delegation.py  agent_goal_drift.py  agent_loop_detect.py  agent_memory_guard.py  agent_permission.py  agent_resource_guard.py  agent_scope_guard.py  agent_state_guard.py  agent_step_limit.py  ai_basic_act_kr.py  aml_pattern_detect.py  answer_citation_needed.py  answer_completeness.py  answer_completeness_score.py  answer_faithfulness.py  answer_refusal_override.py  api_abuse_detect.py  api_endpoint_safety.py  api_key_detect.py  api_key_format.py  api_key_rotation.py  api_rate_guard.py  api_response_contract.py  api_response_time.py  api_response_validate.py  api_version_check.py  ascii_art.py  attorney_client_privilege.py  audio_transcript_safety.py  audit_trail.py  (+439 more)
python/open_guardrail/presets/: __init__.py
python/tests/: test_adapters.py  test_agent_safety_new.py  test_codegen_multiturn.py  test_commerce_voice_edu_gov.py  test_dx.py  test_eval_compliance_fairness.py  test_guards.py  test_industry_output_ops.py  test_rag_quality_new.py  test_sdk_adapters.py
scripts/: release.sh
(+106 files in other folders)
